--- a/cryptocharter/src/App.css
+++ b/cryptocharter/src/App.css
@@ -1,25 +1,33 @@
 .timeDate {
-  display: flex;
+  display: block;
   flex-direction: row;
 }
 .App-header {
-  margin: 30px;
-  background-color: #161f36;
-  display: flex;
+  margin-left: 50px;
+  /* background-color: #161f36;
+  display: inline;
   flex-direction: row;
-  justify-content: left;
-  font-size: 80px;
+  justify-content: left; */
+  font-size: 7vw;
   color: white;
+}
+p {
+  margin: 40px;
 }
 
 .date {
-  display: flex;
-  flex-direction: row;
-  font-size: 30px;
+  /* display: flex;
+  flex-direction: row; */
+  margin-right: 100px;
+  text-align: right;
+  font-size: 2vw;
   color: #bfbfbf;
 }
 
 .chartdiv {
-  height: 900px;
-  width: 900px;
+  margin-left: 40px;
+  height: 800px;
+  width: 800px;
+  /* height: 60vw;
+  width: 80vw; */
 }
