--- a/cryptocharter/src/index.css
+++ b/cryptocharter/src/index.css
@@ -1,9 +1,11 @@
 body {
-  margin: 0;
+  margin-top: 0;
   background-color: #161f36;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vw;
+  width: 100vw;
 }
